2012-07-27

+ Added Ac_Param_Value
+ Work-in-progress on Ac_Cr_Controller

2012-07-23

+ Added setCollectErrors() to Ac_Accessor (currently exceptions are not wrapped)

2012-07-22

+ Added Ac_Prototype_Builder & Ac_Prototype_Chain
+ Renamed Ac_Autoparams, Ac_I_Autoparams to Ac_Prototyped and Ac_I_Prototyped; renamed $options to $prototype
+ Moved all static methods for property access from Ac_Autoparams (now Ac_Prototyped) to Ac_Accessor
+ Ac_Accessor::mapFunctionArgs for by-name passing; Ac_Prototyped::factory now accepts __initialize args 
  and allows __constructor keys to be passed by arg name.
+ Ac_Prototyped descendants now accept __initialize key with methodName => args too

2012-07-20

+ Created Ac_Accessor with Strategy dependency (Ac_I_AccessorStrategy); used them in Ac_Cr_Strategy to implement 'magic' properties 'param' & 'use'.
+ Added Ac_Autoparams::factoryOnce for helper flyweight classes.
+ Added Ac_Request::populate() function to help to create virtual requests based on Url & post values

2012-07-18

+ Small fixes to Ac_Application, Ac_Util & Ac_Autoparams
+ Added Ac_Request family (with _Src and _Accessor sub-classes), tests for them
+ Added Ac_Cr_Url
* Fixed some tests that involved legacy database

2012-03-22

+ Ae_Sql_Db is now abstract, added proper method visibility ('protected' instead of '_')
+ Ae_Model_Mapper::getMapper() supports $application instance and passing instance directly instead of 'mapper class' string
- Dropped Ae_Config references in Ae_Legacy_Database and its descendant
- Removed Ae_Dispatcher::loadClass() references in Cg_ family and code templates
+ Added addAssetLibs(), replacePrefixes() to Ae_Legacy_Controller_Response_Html; Ae_Output now provides Ae_Application instance to it
+ Ae_Util::htmlspecialchars now uses ENT_QUOTES by default (but I have to review htmlspecialchars in other parts of the framework yet)

2012-03-06
